project/k8s/logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logger-service
  template:
    metadata:
      labels:
        app: logger-service
    spec:
      containers:
        - name: logger-service
          image: "hbrawnak/logger:1.0.3"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
            - containerPort: 5001
            - containerPort: 50001
---

apiVersion: v1
kind: Service
metadata:
  name: logger-service
spec:
  selector:
    app: logger-service
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web-port
    - port: 5001
      targetPort: 5001
      protocol: TCP
      name: rpc-port
    - port: 50001
      targetPort: 50001
      protocol: TCP
      name: grpc-port
